--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -229,8 +229,8 @@
        "T13       66\n",
        "T12       27\n",
        "T2        16\n",
-       "T14        3\n",
        "T25        3\n",
+       "T14        3\n",
        "T29        2\n",
        "T15        2\n",
        "T17        1\n",
@@ -332,11 +332,11 @@
        "C3000     1918\n",
        "C2100     1883\n",
        "         ...  \n",
-       "C2380        1\n",
-       "C8210        1\n",
-       "C1245        1\n",
-       "C4500        1\n",
-       "C1570        1\n",
+       "C1283        1\n",
+       "C1820        1\n",
+       "C1580        1\n",
+       "C1728        1\n",
+       "C6100        1\n",
        "Name: CLASSIFICATION, Length: 71, dtype: int64"
       ]
      },
@@ -996,18 +996,20 @@
    ],
    "source": [
     "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-    "#  YOUR CODE GOES HERE\n",
+    "number_input_features = len(X_train_scaled[0])\n",
+    "hidden_nodes_layer1 =  80\n",
+    "hidden_nodes_layer2 = 30\n",
     "\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
     "# First hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation='relu'))\n",
     "\n",
     "# Second hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation='relu'))\n",
     "\n",
     "# Output layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation='sigmoid'))\n",
     "\n",
     "# Check the structure of the model\n",
     "nn.summary()"
@@ -1020,36 +1022,209 @@
    "outputs": [],
    "source": [
     "# Compile the model\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Import checkpoint dependencies.\n",
+    "import os\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+    "\n",
+    "# Define the checkpoint path and filenames.\n",
+    "os.makedirs(\"checkpoints/\",exist_ok=True)\n",
+    "checkpoint_path = \"checkpoints/weights.{epoch:02d}.hdf5\"\n",
+    "\n",
+    "# Create the callback Checkpoint function.\n",
+    "cp_callback = ModelCheckpoint(\n",
+    "    filepath=checkpoint_path,\n",
+    "    verbose=1,\n",
+    "    save_weights_only=True,\n",
+    "    save_freq=4020\n",
+    ")\n",
+    "# Each epoch is 804 batches => 5*804=4020 batches to checkpoint for 5 epochs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "804/804 [==============================] - 3s 2ms/step - loss: 0.5705 - accuracy: 0.7219\n",
+      "Epoch 2/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5554 - accuracy: 0.7295\n",
+      "Epoch 3/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5517 - accuracy: 0.7324\n",
+      "Epoch 4/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5495 - accuracy: 0.7329\n",
+      "Epoch 5/50\n",
+      "796/804 [============================>.] - ETA: 0s - loss: 0.5490 - accuracy: 0.7332\n",
+      "Epoch 00005: saving model to checkpoints\\weights.05.hdf5\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5486 - accuracy: 0.7334\n",
+      "Epoch 6/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5477 - accuracy: 0.7328\n",
+      "Epoch 7/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5468 - accuracy: 0.7337\n",
+      "Epoch 8/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5457 - accuracy: 0.7348\n",
+      "Epoch 9/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5457 - accuracy: 0.7351\n",
+      "Epoch 10/50\n",
+      "793/804 [============================>.] - ETA: 0s - loss: 0.5443 - accuracy: 0.7349\n",
+      "Epoch 00010: saving model to checkpoints\\weights.10.hdf5\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5444 - accuracy: 0.7350\n",
+      "Epoch 11/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5440 - accuracy: 0.7357\n",
+      "Epoch 12/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5437 - accuracy: 0.7348\n",
+      "Epoch 13/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5436 - accuracy: 0.7354\n",
+      "Epoch 14/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5429 - accuracy: 0.7371\n",
+      "Epoch 15/50\n",
+      "803/804 [============================>.] - ETA: 0s - loss: 0.5424 - accuracy: 0.7367\n",
+      "Epoch 00015: saving model to checkpoints\\weights.15.hdf5\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5423 - accuracy: 0.7366\n",
+      "Epoch 16/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5424 - accuracy: 0.7366\n",
+      "Epoch 17/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5418 - accuracy: 0.7371\n",
+      "Epoch 18/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5416 - accuracy: 0.7355\n",
+      "Epoch 19/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5414 - accuracy: 0.7377\n",
+      "Epoch 20/50\n",
+      "795/804 [============================>.] - ETA: 0s - loss: 0.5412 - accuracy: 0.7366\n",
+      "Epoch 00020: saving model to checkpoints\\weights.20.hdf5\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5411 - accuracy: 0.7367\n",
+      "Epoch 21/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5405 - accuracy: 0.7377\n",
+      "Epoch 22/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5407 - accuracy: 0.7376\n",
+      "Epoch 23/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5405 - accuracy: 0.7387\n",
+      "Epoch 24/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5406 - accuracy: 0.7386\n",
+      "Epoch 25/50\n",
+      "795/804 [============================>.] - ETA: 0s - loss: 0.5403 - accuracy: 0.7375\n",
+      "Epoch 00025: saving model to checkpoints\\weights.25.hdf5\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5399 - accuracy: 0.7376\n",
+      "Epoch 26/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5396 - accuracy: 0.7390\n",
+      "Epoch 27/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5395 - accuracy: 0.7385\n",
+      "Epoch 28/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5394 - accuracy: 0.7377\n",
+      "Epoch 29/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5388 - accuracy: 0.7386\n",
+      "Epoch 30/50\n",
+      "800/804 [============================>.] - ETA: 0s - loss: 0.5386 - accuracy: 0.7393\n",
+      "Epoch 00030: saving model to checkpoints\\weights.30.hdf5\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5388 - accuracy: 0.7389\n",
+      "Epoch 31/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5386 - accuracy: 0.7387\n",
+      "Epoch 32/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5388 - accuracy: 0.7400\n",
+      "Epoch 33/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5383 - accuracy: 0.7386\n",
+      "Epoch 34/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5382 - accuracy: 0.7397\n",
+      "Epoch 35/50\n",
+      "790/804 [============================>.] - ETA: 0s - loss: 0.5381 - accuracy: 0.7395\n",
+      "Epoch 00035: saving model to checkpoints\\weights.35.hdf5\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5378 - accuracy: 0.7396\n",
+      "Epoch 36/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5380 - accuracy: 0.7390\n",
+      "Epoch 37/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5379 - accuracy: 0.7382\n",
+      "Epoch 38/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5375 - accuracy: 0.7401\n",
+      "Epoch 39/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5376 - accuracy: 0.7403\n",
+      "Epoch 40/50\n",
+      "790/804 [============================>.] - ETA: 0s - loss: 0.5379 - accuracy: 0.7387\n",
+      "Epoch 00040: saving model to checkpoints\\weights.40.hdf5\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5375 - accuracy: 0.7391\n",
+      "Epoch 41/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5370 - accuracy: 0.7395\n",
+      "Epoch 42/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.5376 - accuracy: 0.7395\n",
+      "Epoch 43/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5371 - accuracy: 0.7391\n",
+      "Epoch 44/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5369 - accuracy: 0.7408\n",
+      "Epoch 45/50\n",
+      "793/804 [============================>.] - ETA: 0s - loss: 0.5370 - accuracy: 0.7398\n",
+      "Epoch 00045: saving model to checkpoints\\weights.45.hdf5\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5370 - accuracy: 0.7399\n",
+      "Epoch 46/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5369 - accuracy: 0.7404\n",
+      "Epoch 47/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5369 - accuracy: 0.7414\n",
+      "Epoch 48/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5369 - accuracy: 0.7400\n",
+      "Epoch 49/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5365 - accuracy: 0.7406\n",
+      "Epoch 50/50\n",
+      "802/804 [============================>.] - ETA: 0s - loss: 0.5363 - accuracy: 0.7397\n",
+      "Epoch 00050: saving model to checkpoints\\weights.50.hdf5\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.5363 - accuracy: 0.7398\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x208916964c8>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Train the model\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.fit(X_train_scaled, y_train, epochs=50, callbacks=[cp_callback])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluate the model using the test data\n",
-    "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
-    "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+    "# Save the whole model. - Export the model to an HDF5 model.\n",
+    "nn.save('AlphabetSoupCharity.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "268/268 - 0s - loss: 0.5683 - accuracy: 0.7243\n",
+      "Loss: 0.568274974822998, Accuracy: 0.7243148684501648\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the model using the test data\n",
+    "model_loss, model_accuracy = nn.evaluate(X_test_scaled, y_test, verbose=2)\n",
+    "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+   ]
   }
  ],
  "metadata": {
